# GameRendererLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  ColisionSolver.cpp  ColisionSolver.h  LICENSE  README.md  Renderer.vcxproj  Renderer.vcxproj.filters
Assets/: AssetPath.h
Assets/Shaders/: Circle_shader.glsl  Color_shader.glsl  Square_shader.glsl
Core/: Global.h  SpriteData.h
Debuging/: OpenglDebug.h
Sandbox/: Game.cpp  Sandbox.cpp
Sandbox/GameScripts/: ExampleScript.cpp  ExampleScript.h
include/: GameObject.h  Input.h  RendererEngine_s.h  Scene.h  ScriptableObject.h  Texture2D.h
include/Components/: ColliderComponent.h  Component.h  PhysicBody.h  Sprite.h
lib/: Renderer.idb
scr/: Colider.cpp  ColliderComponent.h  CollisionDetection.cpp  CollisionDetection.h  CollisionSolver.h  CollisionSytstem.cpp  CollisionSytstem.h  Component.cpp  Component.h  ComponentArray.h  ComponentManager.h  DeltaTime.h  ECSManager.h  ECSTypes.h  EntityManager.h  EntryPoint.cpp  EntryPoint.h  GameObject.cpp  GameObjectRegister.cpp  GameObjectRegister.h  ISystem.h  Input.cpp  OnStartup.cpp  PhysicWorld.cpp  PhysicWorld.h  RenderSytstem.cpp  RenderSytstem.h  Renderer.cpp  Renderer.h  Rendererpch.cpp  Rendererpch.h  Scene.cpp  ScriptComponent.h  ScriptSystem.cpp  ScriptSystem.h  ShaderProgram.cpp  ShaderProgram.h  SystemManager.cpp  SystemManager.h  Texture2D.cpp  (+6 more)
scr/Camera/: Camera.cpp  Camera.h
scr/Components/: Camera.h  ColliderComponent.h  PhysicBody.h  ScriptComponent.h  Sprite.h  TagComponent.h  Transoform.h
scr/ECS/: ComponentArray.h  ComponentManager.cpp  ComponentManager.h  ECSManager.cpp  ECSManager.h  EntityManager.cpp  EntityManager.h  ISystem.h  SystemManager.cpp  SystemManager.h
scr/ECS/EventSystem/: EntityEventSystem.h  EventSystem.h
scr/GameObject/: GameObject.cpp  GameObject.h
scr/Input/: Input.cpp  Input.h
scr/Log/: Log.cpp  Log.h
scr/Metric/: MetricHelper.cpp  MetricHelper.h
scr/OpenglData/VertexArray/: VertexArray.cpp  VertexArray.h
scr/OpenglData/VertexData/: Vertex.h
scr/Physics/: PhysicBody.cpp  PhysicBody.h
scr/Physics/Colision/: Colider.cpp  Colider.h  ColisionDetection.cpp  ColisionDetection.h  ColisionSolver.cpp  ColisionSolver.h
scr/Physics/Collision/: Colider.cpp  Colider.h  CollisionDetection.cpp  CollisionDetection.h  CollisionSolver.cpp  CollisionSolver.h  CollisionSytstem.cpp  CollisionSytstem.h
scr/Physics/PhysicSimulation/: PhysicWorld.cpp  PhysicWorld.h
scr/Renderer/: RenderSytstem.cpp  RenderSytstem.h  Renderer.cpp  Renderer.h
scr/Scene/: Scene.cpp  Scene.h
scr/SceneManager/: SceneManager.cpp  SceneManager.h
scr/Script/: Script.cpp  Script.h
scr/Script/ScriptManager/: ScriptManager.h
scr/ScriptSystem/: ScriptSystem.cpp  ScriptSystem.h
scr/ScriptableObject/: ScriptableObject.cpp  ScriptableObject.h
scr/Shader/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.h
scr/Shader/ShadersContianer/: Shaders.h
scr/Sprite/: Sprite.cpp  Sprite.h
scr/TextureClass/: TextureUnitManager.cpp  TextureUnitManager.h
scr/TextureClass/Texture2D/: Texture2D.cpp  Texture2D.h
scr/Transform/: Transoform.cpp  Transoform.h
scr/WindowFunctions/: WindowFunctions.cpp  WindowFunctions.h
